--- a/style/home.css
+++ b/style/home.css
@@ -13,6 +13,18 @@ body{
     src: url(../fonts/...);
 }
 
+header{
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 10px;
+    display: flex;
+    
+}
+
+
+
 @media (min-width: 1024px) {
         
     header{
